Made calendar background transparent rather than white
Seemed like the calendar was a weird addition to the jumbotron grey
color scheme since it was a complete white.  Thought it might look a
little better if it were to just be the same color as the jumbotron.
Can change back if you guys disagree tomorrow

--- a/CalvaryOpebBibleWebsite/Content/CustomCSS/CalendarStyles.css
+++ b/CalvaryOpebBibleWebsite/Content/CustomCSS/CalendarStyles.css
@@ -1,21 +1,23 @@
 ﻿table {
     margin: 0 auto 0 auto;
     border: 2px solid black;
-    border-radius: 50px;
+    background-color: transparent;
 }
 
 th, tr, td {
     border-style: solid;
     border-collapse: collapse;
     border-width: 2px;
-    border-radius: 50px;
+    background-color: transparent;
 }
 
 td {
     height: 125px;
     width: 125px;
+    background-color: transparent;
 }
 
 th {
     text-align: center;
+    background-color: transparent;
 }
