Ministry model changes and Recurring event changes

--- a/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
@@ -38,7 +38,7 @@
 
                 <tr>
                     <th>
-                        @Html.DisplayFor(modelItem => item.MinistriesLeader)
+                        <a href="@Url.Action("Details","Ministries", new { id = item.MinitriesID})">  @Html.DisplayFor(modelItem => item.MinistriesLeader) </a>
                     </th>
                 </tr>
 
